ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyCalculatedDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyCalculatedDebtExpenses__c</fullName>
    <label>Total Monthly Calculated Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>