ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyCalculatedLivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyCalculatedLivingExpenses__c</fullName>
    <label>Total Monthly Calculated Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>