ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyCalMortgageDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyCalMortgageDebtExpenses__c</fullName>
    <label>Total Monthly Cal Mortgage Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>