ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyDeclaredDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyDeclaredDebtExpenses__c</fullName>
    <label>Total Monthly Declared Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>