ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyDeclaredLivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyDeclaredLivingExpenses__c</fullName>
    <label>Total Monthly Declared Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>