ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalMonthlyDeclaredMortgageDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>totalMonthlyDeclaredMortgageDebtExpenses__c</fullName>
    <label>totalMonthlyDeclaredMortgageDebtExpenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>