ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/TotalNetMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalNetMonthlyIncome__c</fullName>
    <label>Total Net Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>