ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalShadedGrossAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>totalShadedGrossAnnualIncome__c</fullName>
    <label>Total Shaded Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>