ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalShadedGrossMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>totalShadedGrossMonthlyIncome__c</fullName>
    <label>Total Shaded Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>