ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalShadedNetAnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>totalShadedNetAnnualIncome__c</fullName>
    <label>Total Shaded Net Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>