ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalShadedNetMonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>totalShadedNetMonthlyIncome__c</fullName>
    <label>Total Shaded Net Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>