ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/totalTax__c.field-meta.xml
<CustomField>
    <fullName>totalTax__c</fullName>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>