ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/WorkFax__c.field-meta.xml
<CustomField>
    <fullName>WorkFax__c</fullName>
    <label>Work Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>