ctm-sf-homeloan-app/main/default/objects/LoanApplicant__c/fields/WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPhone__c</fullName>
    <label>Work Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>